--- a/app/templates/base/base.html
+++ b/app/templates/base/base.html
@@ -13,11 +13,11 @@
   <title>Sistemas Compras e Inventario por DEBS Consultores</title>
 
   <!-- Custom fonts for this template-->
-  <link href="{%static 'base/vendor/fontawesome-free/css/all.min.css' %}" rel="stylesheet" type="text/css">
+  <link href="{% static 'base/vendor/fontawesome-free/css/all.min.css' %}" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 
   <!-- Custom styles for this template-->
-  <link href="css/sb-admin-2.min.css" rel="stylesheet">
+  <link href="{% static 'css/sb-admin-2.min.css' %}" rel="stylesheet">
 
 </head>
 
@@ -341,7 +341,7 @@
           <h1 class="h3 mb-4 text-gray-800">Blank Page</h1>
 
         </div>
-        {% endblock page_content %}
+        {% endblock %}
         <!-- /.container-fluid -->
         
         {%block footer %}
@@ -362,7 +362,7 @@
     <!-- End of Content Wrapper -->
 
   </div>
-  {% endblock footer %}
+  {% endblock %}
   <!-- End of Page Wrapper -->
 
     {block login %} {endblock}
@@ -392,10 +392,10 @@
 
   <!-- Bootstrap core JavaScript-->
   <script src="{% static 'base/vendor/jquery/jquery.min.js' %}"></script>
-  <script src=" {% static 'base/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+  <script src="{% static 'base/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
 
   <!-- Core plugin JavaScript-->
-  <script src=" {% static 'base/vendor/jquery-easing/jquery.easing.min.js' %}"></script>
+  <script src="{% static 'base/vendor/jquery-easing/jquery.easing.min.js' %}"></script>
 
   <!-- Custom scripts for all pages-->
   <script src="{% static 'base/js/sb-admin-2.min.js' %}"></script>
