--- a/app/templates/base/base.html
+++ b/app/templates/base/base.html
@@ -17,13 +17,12 @@
   <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 
   <!-- Custom styles for this template-->
-  <link href="{% static 'css/sb-admin-2.min.css' %}" rel="stylesheet">
+  <link href="{% static 'base/css/sb-admin-2.min.css' %}" rel="stylesheet">
 
 </head>
 
 <body id="page-top">
-
-     {%block side_bar %}
+  {% block side_bar %}
   <!-- Page Wrapper -->
   <div id="wrapper">
 
@@ -149,7 +148,7 @@
       <div id="content">
 
         <!-- Topbar -->
-        {%block top_bar %}
+        {% block top_bar %}
         <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
 
           <!-- Sidebar Toggle (Topbar) -->
@@ -334,7 +333,7 @@
         <!-- End of Topbar -->
 
         <!-- Begin Page Content -->
-        {%block page_content %}
+        {% block page_content %}
         <div class="container-fluid">
 
           <!-- Page Heading -->
@@ -343,8 +342,8 @@
         </div>
         {% endblock %}
         <!-- /.container-fluid -->
-        
-        {%block footer %}
+  
+        {% block footer %}
       </div>
       <!-- End of Main Content -->
 
@@ -365,7 +364,7 @@
   {% endblock %}
   <!-- End of Page Wrapper -->
 
-    {block login %} {endblock}
+  {% block login %}{% endblock %}
   <!-- Scroll to Top Button-->
   <a class="scroll-to-top rounded" href="#page-top">
     <i class="fas fa-angle-up"></i>
@@ -400,7 +399,8 @@
   <!-- Custom scripts for all pages-->
   <script src="{% static 'base/js/sb-admin-2.min.js' %}"></script>
 
-  {%block js_page %} {endblock}
+  {% block js_page %}{% endblock %}
 </body>
 
 </html>
+ 
